fix: logic bug in tweakAutoRestockInventory